Updated/added high contrast styling for primary text; fixes overview page high contrast issue

--- a/src/common/styles/colors.scss
+++ b/src/common/styles/colors.scss
@@ -107,6 +107,7 @@
         --neutral-100: var(--white);
         --neutral-alpha-8: var(--white);
         --secondary-text: var(--white);
+        --primary-text: var(--white);
 
         // Outcome colors
         --positive-outcome: #4ac94a;
